#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([tcpeek], [0.1.0], [yamamoto-ma@klab.jp])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([tcpeek.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(pcap, pcap_lib_version)
AC_CHECK_LIB(pthread, pthread_create)

# Checks for header files.
AC_CHECK_HEADERS([netinet/in.h stdlib.h string.h sys/socket.h sys/time.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_DEFINE([_BSD_SOURCE], 1, [Enable _BSD_SOURCE])
AC_DEFINE([__USE_BSD], 1, [Enable __USE_BSD])
AC_DEFINE([__FAVOR_BSD], 1, [Enable __FAVOR_BSD])

# Checks for library functions.
AC_CHECK_FUNCS([memset strndup])

LIBPCAPPATH="/usr"
AC_ARG_WITH(libpcap,
AC_HELP_STRING([--with-libpcap=PATH],[path to libpcap installation]),
  [
    LIBPCAPPATH="$withval"
    LDFLAGS="-L$LIBPCAPPATH/lib -Wl,-rpath -Wl,$LIBPCAPPATH/lib $LDFLAGS"
    CPPFLAGS="-I$LIBPCAPPATH/include $CPPFLAGS"
  ]
)

AC_ARG_ENABLE(libpcap-static,
  AC_HELP_STRING([--enable-libpcap-static],[libpcap static link]),
  [
    LIBS="$LIBS $LIBPCAPPATH/lib/libpcap.a"
  ],
  [
    LIBS="$LIBS -lpcap"
  ]
)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
